--- a/index.html
+++ b/index.html
@@ -99,29 +99,29 @@
 			<!-- /container -->
 		</nav>
 		<!-- /NAVIGATION -->
-
-		<!-- SECTION -->
-		<div class="section">
-			<!-- container -->
-			<div class="container">
-				<!-- row -->
-				<div class="row">
-					<!-- Product main img -->
-					<div class="col-md-5 col-md-push-2">
-						<div>
-							<div>
-								<img src="./img/banner.png" alt="">
-							</div>
-						</div>
+<!-- SECTION -->
+<div class="section">
+	<!-- container -->
+	<div class="container">
+		<!-- row -->
+		<div class="row">
+			<!-- Product main img -->
+			<div class="col-md-5 col-md-push-2">
+				<div id="product-main-img">
+					<div class="product-preview">
+						<img src="./img/banner.png" alt="">
 					</div>
-					<!-- /Product main img -->
-	
 				</div>
-				<!-- /row -->
 			</div>
-			<!-- /container -->
+			<!-- /Product main img -->
+
+			
 		</div>
-		<!-- /SECTION -->
+		<!-- /row -->
+	</div>
+	<!-- /container -->
+</div>
+
 
 		<!-- FOOTER -->
 		<footer id="footer">
