--- a/blank.html
+++ b/blank.html
@@ -38,11 +38,6 @@
 	<body>
 		<!-- HEADER -->
 		<header>
-			<!-- TOP HEADER -->
-			<div id="top-header">
-			</div>
-			<!-- /TOP HEADER -->
-
 			<!-- MAIN HEADER -->
 			<div id="header">
 				<!-- container -->
@@ -52,12 +47,26 @@
 						<!-- LOGO -->
 						<div class="col-md-3">
 							<div class="header-logo">
-								<a href="./index.html" class="logo">
+								<a href="#" class="logo">
 									<img src="./img/logo.png" alt="">
 								</a>
 							</div>
 						</div>
-						<!-- /LOGO -->	
+						<!-- /LOGO -->
+						<!-- ACCOUNT -->
+						<div class="col-md-3 clearfix">
+							<div class="header-ctn">
+								<!-- Menu Toogle -->
+								<div class="menu-toggle">
+									<a href="#">
+										<i class="fa fa-bars"></i>
+										<span>Semester</span>
+									</a>
+								</div>
+								<!-- /Menu Toogle -->
+							</div>
+						</div>
+						<!-- /ACCOUNT -->
 					</div>
 					<!-- row -->
 				</div>
@@ -90,29 +99,29 @@
 			<!-- /container -->
 		</nav>
 		<!-- /NAVIGATION -->
-
-		<!-- SECTION -->
-		<div class="section">
-			<!-- container -->
-			<div class="container">
-				<!-- row -->
-				<div class="row">
-					<!-- Product main img -->
-					<div class="col-md-5 col-md-push-2">
-						<div>
-							<div>
-								<img src="./img/sry.png" alt="">
-							</div>
-						</div>
+<!-- SECTION -->
+<div class="section">
+	<!-- container -->
+	<div class="container">
+		<!-- row -->
+		<div class="row">
+			<!-- Product main img -->
+			<div class="col-md-5 col-md-push-2">
+				<div id="product-main-img">
+					<div class="product-preview">
+						<img src="./img/sry.png" alt="">
 					</div>
-					<!-- /Product main img -->
-	
 				</div>
-				<!-- /row -->
 			</div>
-			<!-- /container -->
+			<!-- /Product main img -->
+
+			
 		</div>
-		<!-- /SECTION -->
+		<!-- /row -->
+	</div>
+	<!-- /container -->
+</div>
+
 
 		<!-- FOOTER -->
 		<footer id="footer">
